feat(contract): create slots from start and duration
